--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nguo ya Ngoro</title>
-    <h1>Wira wa moko mwakwa</h1>
-    <p>The works here are handmade with love by Wanjiru.</p>
+<html>
+<head>
+  <title>Nguo ya ngoro</title>
   </head>
+  <body>
+    <h1>WELCOME TO NGUO YA NGORO </h1>
+    <h2>WE ARE HERE TO HELP YOU SHINE</h2>
+    <p>Our mission is to help you shine by providing you with the best quality handcreafted clothes and accessories. We are here to help you look good and feel good. We are here to help you shine. </p>
 </html>
