--- a/index.html
+++ b/index.html
@@ -7,4 +7,10 @@
     <h1>WELCOME TO NGUO YA NGORO </h1>
     <h2>WE ARE HERE TO HELP YOU SHINE</h2>
     <p>Our mission is to help you shine by providing you with the best quality handcreafted clothes and accessories. We are here to help you look good and feel good. We are here to help you shine. </p>
+    <p>Our products are made with love and care. </p>
+    <a href="products.html"
+      title="Our product catalogue"
+      View our products
+    </a>
+      </body>
 </html>
