--- a/products.html
+++ b/products.html
@@ -6,6 +6,14 @@
         <h1>Products</h1>
         <p>Our products are custom made to your measurements. The pictures showed here are for reference of the look for the end procuct</p>
         <p>Our products are made with the best materials and the best quality</p>
+    <img src="images/bandana.png">
+    alt="This is a picture of a bandana"
+
+    <img src="images/flower.png"
+    alt="This is a picture of a flower"
+
+    img src="images/plushie.png"
+    alt="This is a picture of a crochet plushie"
     
     </body>
 </head>
