--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <title>Products</title>
+  </head>
+  <body>
+    <h1>Products</h1>
+    <p>Our products are custom made to your measurements. The pictures showed here are for reference of the look for the end procuct</p>
+    <p>Our products are made with the best materials and the best quality</p>
+    <img src="images/bandana.png" alt="This is a picture of a bandana">
+    <img src="images/flower.png" alt="This is a picture of a flower">
+    <img src="images/plushie.png" alt="This is a picture of a crochet plushie">
+  </body>
 <head>
   <title>Nguo ya ngoro</title>
   </head>
