--- a/products.html
+++ b/products.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Products</title>
     <body>
@@ -14,7 +14,7 @@
 
     img src="images/plushie.png"
     alt="This is a picture of a crochet plushie"
-    
+
     </body>
 </head>
 </html>
